# tiny-brains

./: .gitignore  Cargo.toml  README.md  justfile  tailwind.config.js
assets/: Untitled Diagram.drawio
configuration/: template.yaml
src/: main.rs
src/brains/: mod.rs
styles/: index.css  index_template.css
templates/: index.html  pageNotFound.html  recently_added.html  todos.html
templates/brains/: enableDiagramRendering.html  hostOnLambdaPage.html  makeFileAndJustfile.html  searchPage.html  serverSideMarkdown.html
templates/brains/md-articles/: enable-draw-io-integration.md  single-page-app-experience-with-htmx.md  support-markdown-files.md
templates/brains/template_fragments/: article_template.html  aside_templ.html  head_templ.html
